[package]
name = "trading-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28"
eframe = "0.28"
egui_extras = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rfd = "0.14"  # For file dialogs
dirs = "5.0"  # For finding user directories
